[package]
name = "scanflow-cli"
version = "0.1.2"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
license = "MIT"
description = "memory scanner frontent CLI"
documentation = "https://docs.rs/scanflow"
categories = [ "command-line-utilities", "parsing", "os", "memory-management" ]
keywords = [ "scanflow", "memflow", "cheatengine", "memory", "dma" ]
repository = "https://github.com/h33p/scanflow"
readme = "../README.md"

[dependencies]
memflow = { git = "https://github.com/memflow/memflow.git", branch = "next" }
simplelog = "0.8.0"
scan_fmt = "0.2.5"
scanflow = { version = "0.1", path = "../scanflow", features = ["progress_bar"] }
clap = "2.33"
log = "0.4"
